# rust-kernel

./: Cargo.toml  README.md  readme.md  run.sh  x86_64-rust-os.json
.cargo/: config.toml
.github/workflows/: rust.yml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
